--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -20,10 +21,13 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "dotenv": "^16.4.5",
+    "fabric": "^5.3.0",
     "ngx-clipboard": "^16.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.7",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,6 +36,7 @@
     "@angular-devkit/build-angular": "^16.2.11",
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/fabric": "^5.3.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
