--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "dotenv": "^16.4.5",
     "fabric": "^5.3.0",
     "ngx-clipboard": "^16.0.0",
+    "ngx-owl-carousel-o": "^16.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7",
     "toastr": "^2.1.4",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
