--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "dotenv": "^16.4.5",
     "fabric": "^5.3.0",
     "ngx-clipboard": "^16.0.0",
+    "ngx-cookie-service": "^16.0.1",
     "ngx-owl-carousel-o": "^16.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7",
     "toastr": "^2.1.4",
