--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "dotenv": "^16.4.5",
     "fabric": "^5.3.0",
+    "jspdf": "^2.5.1",
     "ngx-clipboard": "^16.0.0",
     "ngx-cookie-service": "^16.0.1",
     "ngx-owl-carousel-o": "^16.0.0",
